fix: column names in data browser menu not left-aligned (#2263)

--- a/src/components/ColumnsConfiguration/ColumnConfigurationItem.scss
+++ b/src/components/ColumnsConfiguration/ColumnConfigurationItem.scss
@@ -1,7 +1,6 @@
 .columnConfigItem {
   padding: 8px 10px;
   display: flex;
-  justify-content: space-between;
   border-radius: 5px;
   cursor: grab;
 }
@@ -21,4 +20,10 @@
   text-overflow: ellipsis;
   overflow: hidden;
   line-height: 24px;
+}
+
+.columnIcon {
+  width: auto;
+  flex-grow: 1;
+  justify-content: end;
 }
